--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-<item android:id="@+id/menu_cotegorias"
+<item android:id="@+id/categoriasFragment"
     android:title="@string/categorias"
     android:icon="@drawable/ic_categories"/>
 
-<item android:id="@+id/menu_inicio"
+<item android:id="@+id/inicioFragment"
     android:title="@string/inicio"
     android:icon="@drawable/ic_home"/>
 
-<item android:id="@+id/menu_perfil"
+<item android:id="@+id/perfilFragment"
     android:title="@string/perfil"
     android:icon="@drawable/ic_profile"/>
 
