--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -23,9 +23,9 @@
             android:textStyle="italic"
             android:textColor="@color/black"/>
     </FrameLayout>
-
+    <!-- TODO: Update blank fragment layout-->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyckerView"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
